--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "mocha **//*.test.js",
     "testm": "nodemon --exec \"npm test\""
+  },
+  "engines": {
+    "node": "10.14.2"
   },
   "author": "",
   "license": "ISC",
